--- a/readme
+++ b/readme
@@ -1,3 +1,3 @@
 In this repositories, I have included all my homebrewed Notebooks on Kaggle and blogs.
 Note: These are entirely made by me from scratch, if you want to use them, please remember to cite me on any platform you like!
-
+All notebok linked from Kaggle
