--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
 In this repositories, I have included all my homebrewed Notebooks on Kaggle and blogs.
 Note: These are entirely made by me from scratch, please remember to cite me on any platform you like!
-All notebok linked from Kaggle
+All notebok linked from Kaggle,
 Please follow
