--- a/readme
+++ b/readme
@@ -2,3 +2,4 @@ In this repositories, I have included all my homebrewed Notebooks on Kaggle and 
 Note: These are entirely made by me from scratch, please remember to cite me on any platform you like!
 All notebok linked from Kaggle,
 Please follow
+linkedin.com/in/tusharaggarwalinseec/
