--- a/readme
+++ b/readme
@@ -2,4 +2,4 @@ In this repository, I have included all my homebrewed Notebooks on Kaggle and bl
 Note: These are entirely made by me from scratch, please remember to cite me on any platform you like!
 All notebok linked from Kaggle,
 Please follow,
-linkedin.com/in/tusharaggarwalinseec/,
+linkedin.com/in/tusharaggarwalinseec/
