--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 In this repository, I have included all my homebrewed Notebooks on Kaggle and blogs.
 Note: These are entirely made by me from scratch, please remember to cite me on any platform you like!
-All notebok linked from Kaggle
+All notebok linked from Kaggle,
 Please follow
 linkedin.com/in/tusharaggarwalinseec/
